catalog/elk/kubernetes/es-client-statefulset.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: es-client
spec:
  serviceName: es-client
  replicas: 2
  template:
    metadata:
      labels:
        app: elk
        component: elasticsearch
        role: client
        release: stable      # canary
        environment: staging # dev, qa, production
        tier: database       # frontend, backend, cache
        partition: all       # customer_1, customer_2, developer_1, beta_release
      annotations:
        pod.beta.kubernetes.io/init-containers: '[
          {
          "name": "sysctl",
            "image": "busybox",
            "imagePullPolicy": "IfNotPresent",
            "command": ["sysctl", "-w", "vm.max_map_count=262144"],
            "securityContext": {
              "privileged": true
            }
          }
        ]'
    spec:
      containers:
      - name: es-client
        securityContext:
          privileged: true
          capabilities:
            add:
              - IPC_LOCK
        image: hbouvier/elasticsearch-kubernetes:5.2.0
        imagePullPolicy: Always
        ports:
        - containerPort: 9200
          name: http
          protocol: TCP
        - containerPort: 9300
          name: transport
          protocol: TCP
  #       volumeMounts:
  #       - name: storage
  #         mountPath: /data
  #     # volumes:
  #     #     - emptyDir:
  #     #         medium: ""
  #     #       name: "storage"
  #     volumes:
  #     - name: storage
  #       persistentVolumeClaim:
  #         claimName: storage
  # volumeClaimTemplates:
  # - metadata:
  #     name: storage
  #     annotations:
  #       volume.beta.kubernetes.io/storage-class: aws-ebs-encrypted-ssd
  #       # volume.alpha.kubernetes.io/storage-class: ebs-ssd-encrypted
  #   spec:
  #     accessModes:
  #     - ReadWriteOnce
  #     resources:
  #       requests:
  #         storage: 48Gi
