catalog/elk/kubernetes/es-ingress.minikube.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elasticsearch
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # ingress.kubernetes.io/rewrite-target: /
  labels:
    app: elk
    component: elasticsearch
    role: es-client-ingress
    release: stable      # stable, canary, alpha, beta, experimental, latest, debug
    environment: dev     # dev, staging, qa, production
    partition: all       # customer_1, customer_2, developer_1, beta_release
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: elasticsearch.cluster.local
    http:
      paths:
      - path: /
        backend:
          serviceName: elasticsearch
          servicePort: 9200
